--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -91,11 +91,10 @@ The proposal inarticulately stated another objective to build a mechanism, which
 \section{Structure of the Report}
 
 \begin{description}
-    \item[Section 3] illustrates the architecture and concepts of various systems of the project.
-    \item[Section 4] goes into detail and describes the implementation and technology choices.
-    \item[Section 5] reviews the functional and algorithmic correctness of the solutions.
-    \item[Section 6] evaluates the project against the project objectives.
-    \item[Section 7] reflects on the project outcome and possible future work.
+    \item[Chapter 2] illustrates the architecture and concepts of various systems of the project.
+    \item[Chapter 3] goes into detail and describes the implementation, testing and technology choices.
+    \item[Chapter 4] evaluates the project against the project objectives.
+    \item[Chapter 5] reflects on the project outcome and possible future work.
     \item[Appendix A] contains the bibliographical references of the report.
     \item[Appendix B] offers user manuals of the various systems implemented.
     \item[Appendix C] lists the source code written for this project.
